syntax = "proto3";

import "google/protobuf/empty.proto";

service ProfileService {
  rpc GetAllProfile (google.protobuf.Empty) returns (ProfileResponse) {}
}

message ProfileResponse {
  repeated UserProfile profiles = 1;
}

message UserProfile {
  string id = 1;
  string name = 2;
  string link = 3;
}
